<resources>
    <string name="app_name" translatable="false">Android_Supporters_SNS_Project</string>
    <string name="signup_titletext" translatable="false">Supporterz</string>
    <string name="signup_profile_picture_text">프로필 사진</string>
    <string name="signup_email_text">이메일</string>
    <string name="signup_email_repetition_text">중복확인</string>
    <string name="signup_email_warning_text">이메일 형식이 올바르지 않습니다.</string>
    <string name="signup_password_text">비밀번호(8~16자/영어,숫자)</string>
    <string name="signup_password_warning_text">비밀번호 형식이 올바르지 않습니다.(8~16자/영어,숫자)</string>
    <string name="signup_passwordcheck_text">비밀번호 확인</string>
    <string name="signup_password_check_warning_text">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_name_text">이름</string>
    <string name="signup_name_warning_text">이름을 입력해주세요.</string>
    <string name="signup_nickname_text">닉네임(최대 15자)</string>
    <string name="signup_nickname_repetition_button_text">중복확인</string>
    <string name="signup_nickname_warning_text">닉네임을 작성해주세요</string>
    <string name="signup_confirmbutton_text">확인</string>
    <string name="detailContentView_title" translatable="false">Supporterz</string>
    <string name="detailContentView_id_example" translatable="false">choong901@naver.com</string>
    <string name="detailContentView_content_example">예시 텍스트 / Text 길이에 따라 늘어남</string>
    <string name="detailContentView_reply_hint">댓글</string>
    <string name="detailContentView_reply_confirm_button">확인</string>
    <string name="main_titletext" translatable="false">Supporterz</string>
    <string name="main_profileText">팀원</string>
    <string name="main_postText">게시글</string>
    <string name="main_postUserId" translatable="false">User ID</string>
    <string name="modifyinfo_password_warning_text">비밀번호 형식이 올바르지 않습니다.(8~16자/영어,숫자)</string>
    <string name="login_titleText" translatable="false">Supporterz</string>
    <string name="login_loginText">로그인</string>
    <string name="login_signupText">회원가입</string>
    <string name="login_passwordWarningMessage">비밀번호가 일치하지 않습니다.</string>
    <string name="login_emailWarningMessage">존재하지 않는 아이디입니다.</string>
    <string name="login_emailEnterMessage">이메일을 입력해주세요.</string>
    <string name="login_passwordEnterMessage">비밀번호를 입력해주세요.</string>
    <string name="modify_titleText" translatable="false">Supporterz</string>
    <string name="modify_modifyText">수정</string>
    <string name="modify_emailText">이메일</string>
    <string name="modify_nameText">이름</string>
    <string name="modify_nicknameText">닉네임</string>
    <string name="modify_doubleCheck">중복확인</string>
    <string name="modify_passwordText">비밀번호(8~16자/영어,숫자)</string>
    <string name="modify_confirmButton">확인</string>
    <string name="modify_enterNickname">닉네임을 입력해주세요</string>
    <string name="modify_passwordMismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="modify_permission">권한을 거부하셨습니다.</string>
    <string name="modify_pictureFailed">사진을 가져오지 못했습니다.</string>
    <string name="modify_permissionRequired">권한이 필요합니다.</string>
    <string name="modify_profilePermission">프로필 이미지를 바꾸기 위해서는 갤러리 접근 권한이 필요합니다.</string>
    <string name="modify_agree">동의하기</string>
    <string name="modify_cancel">취소하기</string>
    <string name="detail_titleText" translatable="false">Application</string>
    <string name="detail_fieldText">상태 메세지</string>
    <string name="detail_companyText">회사</string>
    <string name="detail_commentText">한 줄 인사</string>
    <string name="splash_titleText" translatable="false">Supporterz</string>
    <string name="splash_subtitleText" translatable="false">teammates</string>
</resources>