<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPasswordActivity">

    <TextView
        android:id="@+id/signup_logo_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/fasthand_regular"
        android:text="@string/signup_titletext"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/signup_backspace_imageview"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/image_button_pressed"
        android:src="@drawable/ic_teammatedetail_backbutton"
        app:layout_constraintBottom_toBottomOf="@+id/signup_logo_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_logo_edittext"
        />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/signup_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        app:dividerColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/signup_logo_edittext" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/signup_divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/signup_mainlayout">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/singup_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <TextView
                android:id="@+id/signup_email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_email_text"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="171dp" />

            <EditText
                android:id="@+id/signup_email_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_signup"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="50dp"
                app:layout_constraintEnd_toEndOf="@id/singup_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/signup_email_textview" />


            <android.widget.Button
                android:id="@+id/signup_emailrepetition_button"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/signup_email_repetition_text"
                app:layout_constraintBottom_toBottomOf="@+id/signup_email_edittext"
                app:layout_constraintStart_toStartOf="@id/singup_vertical_guideline"
                app:layout_constraintTop_toTopOf="@+id/signup_email_edittext" />

            <TextView
                android:id="@+id/signup_emailwarning_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_email_warning_text"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/signup_email_textview"
                app:layout_constraintTop_toBottomOf="@+id/signup_email_edittext" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

