<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/detailContentView_backSpace_imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_teammatedetail_backbutton"
        app:layout_constraintBottom_toBottomOf="@+id/detailContentView_title_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detailContentView_title_textView" />

    <TextView
        android:id="@+id/detailContentView_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailContentView_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/detailContentView_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/detailContentView_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        app:dividerColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/detailContentView_title_textView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailContentView_divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/detailContentView_title_textView">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideLine_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detailContentView_profile_imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_circular_image"
                android:src="@drawable/ic_teammatedetail_person"
                app:civ_border_overlay="true"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideLine"
                app:layout_constraintTop_toTopOf="@+id/inner_layout" />

            <TextView
                android:id="@+id/detailContentView_id_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/detailContentView_id_example"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/detailContentView_profile_imageView"
                app:layout_constraintStart_toEndOf="@+id/detailContentView_profile_imageView"
                app:layout_constraintTop_toTopOf="@+id/detailContentView_profile_imageView" />

            <ImageView
                android:id="@+id/detailContentView_contentimage_imageview"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_teammatedetail_person"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailContentView_id_textview" />

            <TextView
                android:id="@+id/detailContentView_content_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/gray"
                android:padding="10dp"
                android:text="@string/detailContentView_content_example"
                android:textSize="15sp"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="@+id/vertical_guideLine_right"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideLine"
                app:layout_constraintTop_toBottomOf="@+id/detailContentView_contentimage_imageview" />

            <TextView
                android:id="@+id/detailContentView_seeMore_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="더보기"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideLine"
                app:layout_constraintTop_toBottomOf="@+id/detailContentView_content_textview" />

            <EditText
                android:id="@+id/detailContentView_reply_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/edittext_signup"
                android:hint="@string/detailContentView_reply_hint"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="@+id/detailContentView_content_textview"
                app:layout_constraintStart_toStartOf="@id/detailContentView_content_textview"
                app:layout_constraintTop_toBottomOf="@id/detailContentView_content_textview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detailContentView_replyConfirm_button"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detailContentView_reply_confirm_button"
                app:layout_constraintEnd_toEndOf="@+id/vertical_guideLine_right"
                app:layout_constraintTop_toBottomOf="@+id/detailContentView_reply_edittext" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

